--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css_files/style.css">
+    <link rel="stylesheet" type="text/css" href="css_files/basic.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+    <script src="https://use.fontawesome.com/4556705d74.js"></script>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
