made changes to page, added font icons

--- a/index.html
+++ b/index.html
@@ -8,3 +8,21 @@
     <meta charset="utf-8">
     <title></title>
   </head>
+
+  <header>
+  <div class="header">
+    <div class="nav-bar">
+      <ul>
+        <li class="about-me">About Me</li>
+        <li class="skills">Technical Skills</li>
+        <li class="projects"> Projects</li>
+        <li class="contact-me"> Contact Me</li>
+      </ul>
+    </div>
+    <div class="icons">
+      <i class="fa fa-github fa-lg" aria-hidden="true"></i>
+      <i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>
+      <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
+    </div>
+    </div>
+</header>
