added font icons, new images

--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="css_files/style.css">
-    <link rel="stylesheet" type="text/css" href="css_files/basic.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.scss">
+    <link rel="stylesheet" type="text/css" href="stylesheets/basic.scss">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
     <script src="https://use.fontawesome.com/4556705d74.js"></script>
     <meta charset="utf-8">
     <title></title>
   </head>
+  <body>
 
-  <header>
-  <div class="header">
-    <div class="nav-bar">
-      <ul>
-        <li class="about-me">About Me</li>
-        <li class="skills">Technical Skills</li>
-        <li class="projects"> Projects</li>
-        <li class="contact-me"> Contact Me</li>
-      </ul>
-    </div>
-    <div class="icons">
-      <i class="fa fa-github fa-lg" aria-hidden="true"></i>
-      <i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>
-      <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
-    </div>
-    </div>
-</header>
+
+      <header>
+        <div class="header">
+          <div class="nav-bar">
+            <ul>
+              <li class="about-me">About Me</li>
+              <li class="skills">Technical Skills</li>
+              <li class="projects"><a href="portfolio.html"> Portfolio</a></li>
+              <li class="contact-me"> Contact Me</li>
+            </ul>
+          </div>
+        </div>
+
+      <div class="image">
+        <img src="images/image1.jpg" alt="Image of beautiful ceiling.">
+      </div>
+      <div class="image1">
+        <img src="images/image1.jpg" alt="Image of beautiful ceiling.">
+      </div>
+      <div class="image2">
+        <img src="images/image1.jpg" alt="Image of beautiful ceiling.">
+      </div>
+    </header>
+  </body>
+</html>
