--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="stylesheets/portfolio.scss">
-    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/basic.scss"> -->
+    <link rel="stylesheet" type="text/css" href="stylesheets/portfolio.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/basic.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
     <script src="https://use.fontawesome.com/4556705d74.js"></script>
     <meta charset="utf-8">
