--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
         </div>
 
-      <div class="image">
+      <!-- <div class="image">
         <img src="images/image1.jpg" alt="Image of beautiful ceiling.">
       </div>
       <div class="image1">
@@ -31,7 +31,7 @@
       </div>
       <div class="image2">
         <img src="images/image1.jpg" alt="Image of beautiful ceiling.">
-      </div>
+      </div> -->
     </header>
   </body>
 </html>
