added welcome div and paragraph

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <div class="header">
           <div class="nav-bar">
-            <ul>
+            <ul class="nav-bar-links">
               <li class="about-me">About Me</li>
               <li class="skills">Technical Skills</li>
               <li class="projects"><a href="portfolio.html"> Portfolio</a></li>
@@ -32,6 +32,14 @@
       <div class="image2">
         <img src="images/image1.jpg" alt="Image of beautiful ceiling.">
       </div> -->
+      <div class="welcome">
+        <p>Welcome</p>
+      </div>
     </header>
+
+    <!-- <main class='main'>
+      <p class="coming-soon">Coming Soon</p>
+    </main> -->
+
   </body>
 </html>
