--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
@@ -15,31 +15,27 @@
         <div class="header">
           <div class="nav-bar">
             <ul class="nav-bar-links">
-              <li class="about-me">About Me</li>
-              <li class="skills">Technical Skills</li>
-              <li class="projects"><a href="portfolio.html"> Portfolio</a></li>
-              <li class="contact-me"> Contact Me</li>
+              <li class="link about-me">About Me</li>
+              <li class="link skills">Technical Skills</li>
+              <li class="link projects"><a href="portfolio.html"> Portfolio</a></li>
+              <li class="link contact-me"> Contact Me</li>
             </ul>
           </div>
         </div>
 
-      <!-- <div class="image">
-        <img src="images/image1.jpg" alt="Image of beautiful ceiling.">
-      </div>
-      <div class="image1">
-        <img src="images/image1.jpg" alt="Image of beautiful ceiling.">
-      </div>
-      <div class="image2">
-        <img src="images/image1.jpg" alt="Image of beautiful ceiling.">
-      </div> -->
       <div class="welcome">
         <p>Welcome</p>
       </div>
     </header>
 
-    <!-- <main class='main'>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <footer class="bottom-triangle">
+
+    </footer>
+    <!? <main class='main'>
       <p class="coming-soon">Coming Soon</p>
     </main> -->
 
-  </body>
-</html>
+  <!-- </body>
+</html> --> -->
