commented out current design

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <footer class="bottom-triangle">
 
     </footer>
-    <!? <main class='main'>
+    <!-- <main class='main'>
       <p class="coming-soon">Coming Soon</p>
     </main> -->
 
   <!-- </body>
-</html> --> -->
+</html> --> 
