--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Jessica Alexander</title>
-
+    <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
+
+    <div>
+      <h1 class="intials">JA</h1>
+    </div>
+
+    <div >
+      <h2 class="name">Jessica Alexander</h2>
+    </div>
 
   </body>
 </html>
