added google font link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Jessica Alexander</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/basic.css">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet" type="css/text"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Orienta" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
   </head>
   <body>
 
@@ -14,6 +19,7 @@
 
     <div >
       <h2 class="name">Jessica Alexander</h2>
+      <!-- <p><span class="title">Web Developer</span></p> -->
     </div>
 
   </body>
