--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,14 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/portfolio.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/basic.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
     <script src="https://use.fontawesome.com/4556705d74.js"></script>
     <meta charset="utf-8">
-    <title>Jessica's Portfolio</title>
+    <title>JA</title>
   </head>
   <body>
     <header class="header">
-        <h1 class='portfolio-title'> JESSICA ALEXANDER'S PORTFOLIO</h1>
+        <h1 class='portfolio-title'> JA</h1>
     </header>
 
     <h1 class='projects-title'> PROJECTS</h1>
@@ -85,13 +86,20 @@
             <a href=""><i class="fa fa-globe fa-lg" aria-hidden="true"></i></a> -->
           </p>
         </div>
+      </div>
     </div>
-    <footer>
-      <!-- <div class="icons">
-        <i class="fa fa-github fa-lg" aria-hidden="true"></i>
-        <i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>
-        <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
-      </div> -->
+
+
+
+    <footer class="footer">
+    Copyright 2017
+
     </footer>
+
+    <!-- <div class="icons">
+      <i class="fa fa-github fa-lg" aria-hidden="true"></i>
+      <i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>
+      <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
+    </div> -->
   </body>
 </html>
