added portfolio projects div and jquery cdn script

--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Jessica Alexander</title>
+    <title>JA</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/basic.css">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet" type="css/text"> -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet"> -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Orienta" rel="stylesheet"> -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
   </head>
   <body>
@@ -22,5 +18,82 @@
       <!-- <p><span class="title">Web Developer</span></p> -->
     </div>
 
+  <div class="portfolio">
+
+
+    <div class="project-container">
+      <div class="project-image">
+        <img src="images/beep-mainpage.png" alt="image of a highway late at night">
+
+      </div>
+      <div class="project-description">
+        <div class="project-summary">
+          <p>
+            <h1 class="project-title"> Beep</h1>
+            Autonomous Car sharing app that allows a user to sign up as a passenger or owner, and make car reservations.
+
+            <h2 class="sub-heading">Highlights:</h2>
+              <ul>
+                <li>Mobile First </li>
+                <li>Responsive Design</li>
+                <li>No frameworks</li>
+                <li>MVC Architecture</li>
+              </ul>
+          </p>
+        </div>
+        <div class="project-tools">
+          <p>
+            <h2 class="tools">Tools:</h2>
+            HTML, CSS, Javascript, Jquery, Rails, Ruby, Postgres, mySQL, SCSS
+          </p>
+        </div>
+        <div class="project-github">
+
+
+          <p> <a href="https://github.com/jessica-alexander/beep" target="_blank"><span class="button">Github</span></a>  <a href="https://obscure-bastion-41307.herokuapp.com/" target="_blank"><span class ="button">View</span></a>
+            <!-- <a href="https://github.com/jessica-alexander/beep"> <i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+            <a href=""><i class="fa fa-globe fa-lg" aria-hidden="true"></i></a> -->
+          </p>
+        </div>
+      </div>
+
+    </div>
+
+      <div class="project-container">
+        <div class="project-image">
+          <img src="images/seatyoself.png" alt="image of table of food">
+
+        </div>
+        <div class="project-description">
+          <div class="project-summary">
+            <p>
+              <h1 class="project-title"> SeatYoSelf</h1>
+              Restaurant reservation booking app, that allows users to search for restaurants by cuisine, price, and location.
+
+              <h2 class="sub-heading">Highlights:</h2>
+                <ul>
+                  <li>MVC Architecture</li>
+                  <li>ORM Framework</li>
+                </ul>
+            </p>
+          </div>
+          <div class="project-tools">
+            <p>
+              <h2 class="tools">Tools:</h2>
+              HTML, CSS, Rails, Ruby, mySQL, SCSS
+            </p>
+          </div>
+          <div class="project-github">
+
+
+            <p> <a href="https://github.com/jessica-alexander/seatyourself" target="_blank"><span class="button">Github</span></a>
+              <!-- <a href="https://github.com/jessica-alexander/beep"> <i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+              <a href=""><i class="fa fa-globe fa-lg" aria-hidden="true"></i></a> -->
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </body>
 </html>
