added About and Portfolio links in a div

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
   </head>
   <body>
-
+    <div class="nav-bar">
+      <li class="">About</li>
+      <li class="">Portfolio</li>
+    </div>
     <div>
       <p class="intials">JA</p>
     </div>
