changed div to nav

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
   </head>
   <body>
-    <div class="nav-bar">
+    <nav class="nav-bar">
       <li class="">About</li>
       <li class="">Portfolio</li>
-    </div>
+    </nav>
     <div>
       <p class="intials">JA</p>
     </div>
