added class name to about li

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="nav-bar">
-      <li class="">About</li>
+      <li class="about-link">About</li>
       <li class="">Portfolio</li>
     </nav>
     <div>
