--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>JA</title>
+    <title>JA Front-End Developer</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/basic.css">
     <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
