removed Project title

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <h1 class='portfolio-title'> JA</h1>
     </header>
 
-    <h1 class='projects-title'> PROJECTS</h1>
+    <!-- <h1 class='projects-title'> PROJECTS</h1> -->
 
     <div class="project-container">
       <div class="project-image">
