--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
     <script src="https://use.fontawesome.com/4556705d74.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>JA</title>
   </head>
