--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="nav-bar">
       <li class="about-link">About</li>
-      <li class="">Portfolio</li>
+      <a href="portfolio.html"><li class="">Portfolio</li></a>
     </nav>
     <div>
       <p class="intials">JA</p>
@@ -20,6 +20,16 @@
     <div >
       <h2 class="name">Jessica Alexander</h2>
       <!-- <p><span class="title">Web Developer</span></p> -->
+    </div>
+
+    <div class="about">
+      <h1>About Me</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+         ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+         voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
     </div>
 
   <div class="portfolio">
