--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="nav-bar">
-      <li class="about-link">About</li>
+      <a href="#about"><li class="about-link">About</li></a>
       <a href="portfolio.html"><li class="">Portfolio</li></a>
     </nav>
     <div>
@@ -23,7 +23,7 @@
     </div>
 
     <div class="about">
-      <h1 class="about-header">About Me</h1>
+      <h1 class="about-header" id="about">About Me</h1>
       <p class="about-content">
          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
