--- a/portfolio.html
+++ b/portfolio.html
@@ -90,6 +90,41 @@
       </div>
     </div>
 
+    <div class="project-container">
+      <div class="project-image">
+        <img src="images/beep-mainpage.png" alt="image of a highway late at night">
+
+      </div>
+      <div class="project-description">
+        <div class="project-summary">
+          <p>
+            <h1 class="project-title"> Client Website</h1>
+            Website to be used as a marketing tool for client's Dj Services.
+
+            <h2 class="sub-heading">Highlights:</h2>
+              <ul>
+                <li>Mobile First </li>
+                <li>Responsive Design</li>
+                <li>One page design</li>
+              </ul>
+          </p>
+        </div>
+        <div class="project-tools">
+          <p>
+            <h2 class="tools">Tools:</h2>
+            HTML and CSS
+          </p>
+        </div>
+        <div class="project-github">
+
+
+          <p> <a href="https://github.com/jessica-alexander/beep" target="_blank"><span class="button">Github</span></a>  <a href="https://www.tomstrandevents.com/" target="_blank"><span class ="button">View</span></a>
+            <!-- <a href="https://github.com/jessica-alexander/beep"> <i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+            <a href=""><i class="fa fa-globe fa-lg" aria-hidden="true"></i></a> -->
+          </p>
+        </div>
+      </div>
+
 
 
     <footer class="footer">
