added class name to new image

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
 
     <div class="project-container">
       <div class="project-image">
-        <img src="images/tomstrandevents.png" alt="image of a highway late at night">
+        <img src="images/tomstrandevents.png" alt="image of a highway late at night" class="tom-img">
 
       </div>
       <div class="project-description">
