--- a/portfolio.html
+++ b/portfolio.html
@@ -92,8 +92,8 @@
 
     <div class="project-container">
       <div class="project-image">
-        <img src="images/tomstrandevents.png" alt="image of a highway late at night" class="tom-img">
-
+        <img src="images/tomstrandevents.png" alt="image of homepage screen of tomstrandevents website" class="tom-img">
+        <img src="images/tomstrandevents2.png" alt="image of Clients on the tomstrandevents website" class="tom-img tom-img2">
       </div>
       <div class="project-description">
         <div class="project-summary">
