changed h1 tag for new addition to project, changed project description

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,8 +98,8 @@
       <div class="project-description">
         <div class="project-summary">
           <p>
-            <h1 class="project-title"> Client Website</h1>
-            Website to be used as a marketing tool for client's Dj Services.
+            <h1 class="project-title"> Client Website - Tom Strand Events</h1>
+            Client's website for his Dj Services.
 
             <h2 class="sub-heading">Highlights:</h2>
               <ul>
