added a class name to new project container

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
       </div>
     </div>
 
-    <div class="project-container">
+    <div class="project-container tom-container">
       <div class="project-image">
         <img src="images/tomstrandevents.png" alt="image of homepage screen of tomstrandevents website" class="tom-img">
         <img src="images/tomstrandevents2.png" alt="image of Clients on the tomstrandevents website" class="tom-img tom-img2">
