removed github button

--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
         <div class="project-github">
 
 
-          <p> <a href="https://github.com/jessica-alexander/beep" target="_blank"><span class="button">Github</span></a>  <a href="https://www.tomstrandevents.com/" target="_blank"><span class ="button">View</span></a>
+          <p> <a href="https://www.tomstrandevents.com/" target="_blank"><span class ="button">View</span></a>
             <!-- <a href="https://github.com/jessica-alexander/beep"> <i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
             <a href=""><i class="fa fa-globe fa-lg" aria-hidden="true"></i></a> -->
           </p>
