made changes to image description

--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
     <div class="project-container tom-container">
       <div class="project-image">
         <img src="images/tomstrandevents.png" alt="image of homepage screen of tomstrandevents website" class="tom-img">
-        <img src="images/tomstrandevents2.png" alt="image of Clients on the tomstrandevents website" class="tom-img tom-img2">
+        <img src="images/tomstrandevents2.png" alt="Clients list on the tomstrandevents website" class="tom-img tom-img2">
       </div>
       <div class="project-description">
         <div class="project-summary">
