added current changes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <nav class="nav-bar">
       <a href="#about"><li class="about-link">About</li></a>
       <a href="portfolio.html"><li class="">Portfolio</li></a>
+      <a href="mailto:jessicaafreelance@gmail.com">Contact Me</a>
     </nav>
     <div>
       <p class="intials">JA</p>
@@ -121,6 +122,8 @@
         </div>
       </div>
     </div>
+
+    <footer class="footer-footer"> Copyright 2017 </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </body>
 </html>
